# Reposcale

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  reposcaledraft.md
.github/workflows/: ci.yml
cases/: CORPUS.md  CORPUS_V0.md
cases/diagnose/diagnose-001/: case.yaml  hints.yaml  tree.txt
cases/diagnose/diagnose-001/repo/: README.md  requirements.txt
cases/diagnose/diagnose-002/: case.yaml  hints.yaml  tree.txt
cases/diagnose/diagnose-003/: case.yaml  hints.yaml  tree.txt
cases/diagnose/diagnose-004/: case.yaml  hints.yaml  tree.txt
cases/example/: README.md  case.yaml  hints.yaml
cases/example/repo/: README.md
cases/intent/intent-001/: case.yaml  hints.yaml  history.json  tree.txt
cases/intent/intent-002/: case.yaml  hints.yaml  tree.txt
cases/intent/intent-003/: case.yaml  hints.yaml  tree.txt
cases/intent/intent-004/: case.yaml  hints.yaml  tree.txt
cases/plan/plan-001/: case.yaml  hints.yaml  tree.txt
cases/plan/plan-002/: case.yaml  hints.yaml  tree.txt
cases/plan/plan-003/: case.yaml  hints.yaml  tree.txt
cases/plan/plan-004/: case.yaml  hints.yaml  tree.txt
docs/: baseline-v0.md  case-authoring.md  dataset_format.md  launch-kit.md  scoring.md  task_taxonomy.md  vision.md
docs/plans/: 2026-04-10-visibility-launch-design.md  2026-04-10-visibility-launch-plan.md
openspec/: config.yaml
openspec/changes/bootstrap-mvp-pipeline/: tasks.md
openspec/changes/ship-alpha-release/: design.md  proposal.md  tasks.md
openspec/specs/cli-entrypoint/: spec.md
openspec/specs/eval-runner/: spec.md
openspec/specs/results-summary/: spec.md
openspec/specs/seed-cases/: spec.md
prompts/: diagnose.md  intent.md  judge.md  plan.md
schemas/: case.schema.json  evaluation.schema.json  response.schema.json
scripts/: run-baselines.sh  run_eval.py  validate_case_pack.py
src/reposcale/: __init__.py  cli.py  config.py  parser.py  runner.py  summary.py  validate.py
src/reposcale/scoring/: __init__.py  coordinator.py  heuristic.py  llm_judge.py  structural.py
tests/: test_cli.py  test_runner.py  test_scoring.py  test_validate.py
(+83 files in other folders)
